# Arena--view--chat

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  start.ps1  start.sh
.playwright-cli/: page-2026-06-27T15-35-24-215Z.yml  page-2026-06-27T15-36-07-273Z.yml  page-2026-06-27T15-36-34-492Z.yml  page-2026-06-27T15-36-52-796Z.yml
backend/: __init__.py  main.py  version.py
backend/adapters/: base.py  gemini_adapter.py  llm_response.py  openai_adapter.py  unified_llm.py
backend/agents/: base.py  factory.py  judge_agent.py  react_agent.py
backend/api/: middleware.py  schemas.py
backend/context/: history.py  token_counter.py  truncator.py
backend/core/: config.py  debate_scheduler.py  debug_hooks.py  exceptions.py  harness_engine.py  perspective_generator.py  streaming.py  structured_models.py
backend/db/: database.py
backend/memory/: debate_memory.py
backend/observability/: trace_logger.py
backend/scripts/: encrypt_key.py
backend/services/: auth_service.py  crypto_service.py  email_service.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: PRD-UI手绘风优化.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
tests/: conftest.py  test_circuit_breaker.py  test_config.py  test_debate_scheduler.py  test_exceptions.py  test_history.py  test_llm_response.py  test_perspective_generator.py  test_streaming.py  test_token_counter.py  test_tool_base.py  test_tool_errors.py  test_tool_filter.py  test_tool_registry.py  test_tool_response.py  test_truncator.py
(+82 files in other folders)
