[project]
name = "arenaview"
version = "0.1.0"
description = "Multi-Perspective Decision Analysis Platform"
requires-python = ">=3.12"
authors = [{name = "ArenaView"}]
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]
tiktoken = ["tiktoken>=0.5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
